Переход в экран помощи
1. Фиксы кнопок, картинок
2. Экран помощи
3. Кнопка назад в помощи не работает.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_activity_game_guess">GameGuessActivity</string>
     <string name="title_game_guess">Угадай</string>
     <string name="result">Итоги</string>
-    
-    
-    
+    <string name="help">Помощь</string>
+    <string name="title_activity_help">HelpActivity</string>
+
 </resources>
